@@ -7,7 +7,7 @@ Decorators
 
         @decorator
         def log(call):
-            print call.func.__name__, call.args, call.kwargs
+            print call._func.__name__, call._args, call._kwargs
             return call()
 
     ``call`` object also support by name arg introspection and passing additional arguments to decorated function::
