@@ -14,8 +14,8 @@ def tap(x):
 
 @decorator
 def log_calls(call, print_func):
-    arg_words = list(call.args) + ['%s=%s' % t for t in call.kwargs.items()]
-    print_func('Call %s(%s)' % (call.func.__name__, ', '.join(map(str, arg_words))))
+    arg_words = list(call._args) + ['%s=%s' % t for t in call._kwargs.items()]
+    print_func('Call %s(%s)' % (call._func.__name__, ', '.join(map(str, arg_words))))
     result = call()
     print_func('-> %s' % repr(result))
     return result
@@ -28,7 +28,7 @@ def log_errors(call, print_func):
     try:
         return call()
     except Exception as e:
-        print_func('%s: %s in %s' % (e.__class__.__name__, e, call.func.__name__))
+        print_func('%s: %s in %s' % (e.__class__.__name__, e, call._func.__name__))
         raise
 
 print_errors = log_errors(print)
